maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:63: error: not found: value compteur
     setIndication(x-1, y, compteur + 1)
                           ^ShortestPathMaze:66: error: not found: value compteur
     setIndication(x, y+1, compteur + 1)
                           ^ShortestPathMaze:69: error: not found: value compteur
     setIndication(x, y-1, compteur + 1)
                           ^ShortestPathMaze:72: error: not found: value compteur
     setIndication(x+1, y, compteur + 1)
                           ^